# bars-lang

./: .bars_history  .gitignore  Cargo.toml  LICENSE  MANIFEST.md  Makefile  PLAN.md  PLAN_CROSS.md  README.md  ROADMAP.md  build.rs  hello
_bara/: .gitignore  .gitlab-ci.yml  AI_AGENT.md  CLJNIM_RECOMMENDATIONS.md  LICENSE  Makefile  PLAN.md  README.md  TASKS.md  cljnim.nimble  test_single.py  test_vals.clj
_bara/benchmarks/: factorial.clj  fibonacci.clj  hello.clj  run_aot_benchmarks.sh  run_benchmarks.sh
_bara/docs/: index.md
_bara/examples/: ai_features.clj  ai_tools.clj  core.clj  ffi.clj  fizzbuzz.clj  hello.clj  interop.clj  jsonista.clj  jsonista.md  macros.clj  math.clj  wordfreq.clj
_bara/experiments/: README.md
_bara/lib/: cljnim_async.nim  cljnim_pmap.nim  cljnim_pvec.nim  cljnim_runtime.nim  cljnim_runtime_js.nim
bars-pkg/: Cargo.toml
bootstrap/: Cargo.toml  build.rs
compiler/: build.brs  hir.brs  macros.brs  modules.brs  ownership.brs  types.brs
docs/: 01-overview.md  02-installation.md  03-language-guide.md  04-stdlib.md  05-cli-reference.md  06-architecture.md  07-examples.md  08-why-bars.md  09-ownership-model.md  10-strategy.md  DOCTRINE.md
examples/: adt_demo.brs  adt_demo2.brs  adt_demo3.brs  adt_in_vector.brs  adt_nonexhaustive.brs  cond_demo.brs  cond_test.brs  core_demo.brs  defmacro_demo.brs  defmacro_demo2.brs  dummy.rs  ffi_demo.brs  generic_adt.brs  hello.brs  hof_demo.brs  hof_lambda.brs  lexer_test.brs  lexer_test2.brs  lexer_test3.brs  loop_demo.brs  macros.brs  map.brs  match_binding.brs  match_demo.brs  math.brs  math_stdlib.brs  module_adt.brs  module_adt_simple.brs  module_conflict.brs  module_demo.brs  module_demo2.brs  module_nested.brs  module_struct.brs  nested_demo.brs  ownership.brs  set_demo.brs  splicing_demo.brs  stdlib_demo.brs  string.brs  string_ops.brs  (+6 more)
lib/: adt.brs  adt_test.brs  build.brs  conflict_a.brs  conflict_b.brs  core.brs  hir.brs  map.brs  math.brs  nested_outer.brs  qbe.brs  reader.brs  string.brs  struct_test.brs  test.brs  test_module.brs  vector.brs
runtime/: bars_runtime.c  bars_runtime.h
src/: cli.rs  lib.rs  main.rs  modules.rs  target.rs
tests/: compiler_tests.rs  integration_tests.rs  loop_tests.rs  macro_tests.rs  module_tests.rs  ownership_tests.rs  reader_tests.rs  stdlib_tests.rs  types_tests.rs
tools/: balance.py  check-parens.py  gen_hir.py  gen_llvm.py  gen_ownership.py  gen_types.py
(+112 files in other folders)
